add social media and disqus

--- a/themes/hugo-academic/layouts/partials/share.html
+++ b/themes/hugo-academic/layouts/partials/share.html
@@ -2,6 +2,20 @@
 <div class="share-box" aria-hidden="true">
   <ul class="share">
     <li>
+      <a class="blogger"
+         href="https://www.r-bloggers.com/"
+         target="_blank" rel="noopener">
+        <i class="fa fa-star-o" aria-hidden="true"></i>
+      </a>
+    </li>
+    <li>
+      <a class="xing"
+         href=""
+         target="_blank" rel="noopener">
+        <i class="fa fa-xing" aria-hidden="true"></i>
+      </a>
+    </li>
+    <li>
       <a class="twitter"
          href="https://twitter.com/intent/tweet?text={{ .Title | html }}&amp;url={{ .Permalink | html }}"
          target="_blank" rel="noopener">
