--- a/public/styles.css
+++ b/public/styles.css
@@ -1007,14 +1007,14 @@ nav#navbar-main li {
 }
 
 .navbar-default .navbar-nav>li>a:hover {
-  color: #0095eb;
+  color: #4D4D4D;
   background-color: transparent;
 }
 
 .navbar-default .navbar-nav>.active>a,
 .navbar-default .navbar-nav>.active>a:focus,
 .navbar-default .navbar-nav>.active>a:hover {
-  color: #0095eb;
+  color: #4D4D4D;
   font-weight: 700;
   background-color: transparent !important; /* Override Bootstrap. */
 }
@@ -1051,7 +1051,7 @@ nav#navbar-main li {
 
 .dropdown-menu>li>a:focus,
 .dropdown-menu>li>a:hover {
-  color: #0095eb;
+  color: #4D4D4D;
   text-decoration: none;
   background-color: #fff;
 }
@@ -1061,7 +1061,7 @@ nav#navbar-main li {
 .dropdown-menu > .active > a:hover {
   color: #fff;
   text-decoration: none;
-  background-color: #0095eb;
+  background-color: #4D4D4D;
   outline: 0;
 }
 
@@ -1176,7 +1176,7 @@ nav#navbar-main li {
   .navbar-default .navbar-nav .open .dropdown-menu > .active > a,
   .navbar-default .navbar-nav .open .dropdown-menu > .active > a:focus,
   .navbar-default .navbar-nav .open .dropdown-menu > .active > a:hover {
-    color: #0095eb;
+    color: #4D4D4D;
     background-color: transparent;
   }
 
